Add clipboard support

--- a/package.json
+++ b/package.json
@@ -12,27 +12,39 @@
     "files": [
       "app/**/*",
       "node_modules/**/*",
+      "resources/**/*",
       "package.json"
     ],
     "directories": {
       "buildResources": "resources"
     },
     "linux": {
-      "target": "AppImage"
+      "target": "AppImage",
+      "category": "Utility"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "resources/clipboard-icon.png"
     },
     "publish": null
   },
   "scripts": {
+    "postinstall": "electron-builder install-app-deps",
     "start": "node build/start.js",
     "release": "webpack --config=build/webpack.app.config.js --env=production && electron-builder"
   },
   "dependencies": {
+    "auto-launch": "^5.0.5",
+    "clipboard-event": "^1.5.0",
     "fs-jetpack": "^4.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "babel-loader": "^8.2.2",
     "electron": "^13.0.1",
     "electron-builder": "^22.5.1",
+    "source-map-support": "^0.5.6",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3",
